javadoc comments and fix equipment edit implementation